fix: change width of .card__occupation - it was breaking to another line on smaller screens

--- a/src/Scss/_card.scss
+++ b/src/Scss/_card.scss
@@ -40,6 +40,7 @@
 
  .card__occupation {
     @include font($text-small, $text-weight-regular);
+    width: 304px;
 }
 
 .card__nav {
